# react

./: CMakeLists.txt  NOTES.md  README.md  depression.hpp  global_defs.hpp  stimulation_long_term.txt
protocol_generation/: group.py  instructions.py  make_test_protocol.py  protocol.py
simulation/: CMakeLists.txt
simulation/src/: Network.hpp  ParadigmFile.hpp  logging.hpp  main.cpp  stimulation.hpp
simulation/src/modules/: CMakeLists.txt
simulation/src/modules/depression/include/: depression.tpp
simulation/src/modules/inhibition/: CMakeLists.txt
simulation/src/modules/inhibition/include/: inhibition.hpp  inhibition.tpp
simulation/src/modules/io/: CMakeLists.txt
simulation/src/modules/io/include/: io.hpp  io.tpp
simulation/src/modules/neural/: CMakeLists.txt
simulation/src/modules/noise/: CMakeLists.txt
simulation/src/modules/noise/include/: noise.tpp
simulation/src/modules/synaptic/: CMakeLists.txt  synaptic.hpp
simulation/src/modules/synaptic/metrics/include/: metrics.tpp
simulation/src/modules/synaptic/plasticity/hebbian/include/: hebbian.hpp  hebbian.tpp
simulation/src/modules/synaptic/plasticity/shared/: CMakeLists.txt
simulation/src/modules/synaptic/plasticity/structural/: CMakeLists.txt
simulation/src/modules/synaptic/plasticity/structural/include/: structural.hpp  structural.tpp
simulation/src/modules/synaptic/plasticity/structural/src/: structural.cpp
simulation/src/modules/synaptic/shared/: CMakeLists.txt
simulation/src/modules/synaptic/transmission/: CMakeLists.txt
simulation/src/modules/synaptic/transmission/include/: transmission.hpp  transmission.tpp
simulation/tests/: test_neural.cpp
src/: CMakeLists.txt  Network.hpp  ParadigmFile.hpp  depression.hpp  global_defs.hpp  inhibition.hpp  io.hpp  logging.hpp  logist.hpp  main.cpp  neural.hpp  noise.hpp  stimulation.hpp  synaptic.hpp
src/modules/depression/: CMakeLists.txt
src/modules/depression/include/: depression.hpp
src/modules/neural/include/: neural.hpp  neural.tpp
src/modules/noise/include/: noise.hpp
src/modules/shared/: CMakeLists.txt
src/modules/shared/include/: global_types.hpp
src/modules/synaptic/metrics/: CMakeLists.txt
src/modules/synaptic/metrics/include/: metrics.hpp
src/modules/synaptic/plasticity/: CMakeLists.txt  plasticity.hpp
src/modules/synaptic/plasticity/hebbian/: CMakeLists.txt
src/modules/synaptic/plasticity/hebbian/src/: hebbian.cpp
src/modules/synaptic/plasticity/shared/include/: constants.hpp
src/modules/synaptic/shared/include/: types.hpp
tests/: CMakeLists.txt  test_synaptic.cpp
